--- a/index.html
+++ b/index.html
@@ -58,10 +58,111 @@
         </div>
     </section>
     <section class="advantages">
-        <div class="container"></div>
+        <div class="container">
+            <h1 class="title color-violet">Преимущества</h1>
+            <div class="advantages-block d-flex align-items-start flex-wrap">
+
+                <div class="advantages-number mx-0 mx-sm-auto mb-4">
+                    <img class="mb-3 ms-0 ms-sm-5" src="./img/2-advantages/ad-1.svg" alt="">
+                    <h3 class="advantages-number__title mb-2">Формируем до 2000 лидов в день</h3>
+                    <p class="advantages-number__text">
+                        Проводим работу с городами РФ и приводим от 10 до 100 заявок в зависимости
+                        о региона
+                    </p>
+                </div>
+
+                <div class="advantages-number mx-0 mx-sm-auto mb-4">
+                    <img class="mb-3 ms-0 ms-sm-5" src="./img/2-advantages/ad-2.svg" alt="">
+                    <h3 class="advantages-number__title mb-2">Заявки для крупных клиентов - от 120 руб</h3>
+                    <p class="advantages-number__text">
+                        Наши лиды приносят заказчикам до 50% встреч
+                        и переговоров от общего количества лидов
+                    </p>
+                </div>
+
+                <div class="advantages-number mx-0 mx-sm-auto mb-4">
+                    <img class="mb-3 ms-0 ms-sm-5" src="./img/2-advantages/ad-3.svg" alt="">
+                    <h3 class="advantages-number__title mb-2">Генерируем лиды
+                        по всем регионам РФ</h3>
+                    <p class="advantages-number__text">
+                        Мы задействуем все регионы
+                        России для генерации лидов
+                    </p>
+                </div>
+
+                <div class="advantages-number mx-0 mx-sm-auto mb-4">
+                    <img class="mb-3 ms-0 ms-sm-5" src="./img/2-advantages/ad-4.svg" alt="">
+                    <h3 class="advantages-number__title mb-2">Мы работаем со своими сайтами</h3>
+                    <p class="advantages-number__text">
+                        Мы располагаем готовыми ресурсами, от вас потребуется только номер телефона и почта для связи
+                    </p>
+                </div>
+
+                <div class="advantages-number mx-0 mx-sm-auto">
+                    <img class="mb-3 ms-0 ms-sm-5" src="./img/2-advantages/ad-1.svg" alt="">
+                    <h3 class="advantages-number__title mb-2">Работаем с CRM системой</h3>
+                    <p class="advantages-number__text">
+                        Клиентов мы подключаем
+                        к собственной CRM системе.
+                        Прием лидов в реальном времени
+                    </p>
+                </div>
+
+            </div>
+
+            <button class="btn-general d-block d-sm-none">Хочу заявки</button>
+
+            <div class="active d-none d-sm-flex align-items-center justify-content-center">
+                <div class="active-element me-4"></div>
+                <div class="active-element active-element__violet me-4"></div>
+                <div class="active-element me-4"></div>
+                <div class="active-element me-4"></div>
+                <div class="active-element me-4"></div>
+                <div class="active-element"></div>
+            </div>
+
+        </div>
     </section>
     <section class="abouts-us">
-        <div class="container"></div>
+        <div class="container">
+            <div class="abouts-us-block d-flex align-items-end justify-content-between">
+
+                <div class="about-us__img d-flex position-relative">
+                    <h1 class="title-bout-us position-absolute title color-violet mb-0">О нас</h1>
+                    <img class="abouts-us-img" src="./img/3-about-us/about-big.png" alt="">
+                </div>
+
+                <div class="about-us__info">
+                    <p class="abous-us__text">Наша компания уже более 4-х лет работает в сфере миграционных услуг по
+                        всем регионам России. Мы сотрудничаем с уже более 50-ти компаниями-партнерами. Генерация лидов
+                        по банкротству дает возможность нашей компании выделяться среди конкурентов, ведь мы окупаем
+                        вложения в рекламу и повышаем лидогенерацию на качество. Специалисты нашей компании помогают
+                        генерировать качественные лиды и приводить именно тех потенциальных клиентов, которые готовы
+                        законно списывать долги.</p>
+                    <div class="about-us__number d-flex align-items-start">
+                        <div class="about-us__number__element mx-auto">
+                            <h3 class="abous-us__element__title color-violet text-center mb-2">50</h3>
+                            <p class="abous-us__element__text text-center">компаний-партнёров <br>
+                                по всей РФ</p>
+                        </div>
+
+                        <div class="about-us__number__element mx-auto">
+                            <h3 class="abous-us__element__title color-violet text-center mb-2">120</h3>
+                            <p class="abous-us__element__text text-center">заявки для<br> крупных клиентов<br> от 120 р
+                            </p>
+                        </div>
+
+                        <div class="about-us__number__element mx-auto">
+                            <h3 class="abous-us__element__title color-violet text-center mb-2">4</h3>
+                            <p class="abous-us__element__text text-center">года опыта работы
+                                в <br> сфере миграционных<br>
+                                услуг </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </section>
     <section class="cases">
         <div class="container"></div>
